changed the init function, started working on the eating threads

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -5,9 +5,9 @@ CC := cc
 #TODO: add back flags
 #CFLAGS :=  -Wextra -Wall -Werror -I./includes -g
 CFLAGS :=  -I./includes -g
+LINKFLAGS := -pthread
 
-
-SRCS := src/init.c src/main.c src/parsing.c src/utils.c
+SRCS := src/init.c src/main.c src/parsing.c src/utils.c src/start_eat.c
 OBJDIR := obj
 OBJS := $(patsubst src/%.c,$(OBJDIR)/%.o,$(SRCS))
 
@@ -19,7 +19,7 @@ $(OBJDIR)/%.o: src/%.c | $(OBJDIR)
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS) 
-	@$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+	@$(CC) $(CFLAGS) $(OBJS) -o $(NAME) $(LINKFLAGS)
 
 -include $(OBJS:.o=.d)
 
